--- a/i/in/ind/indigorose.com.html
+++ b/i/in/ind/indigorose.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the indigorose.com privacy policy that was archived on 2013-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130607204604id_/http%3A//indigorose.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the indigorose.com privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223022919id_/http%3A//www.indigorose.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US" xml:lang="en-US"><head profile="http://gmpg.org/xfn/11">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -63,7 +63,7 @@
 <div id="wrap">
 <div id="header"><div class="wrap"><div id="title-area"><p id="title"><a href="http://www.indigorose.com/" title="Indigo Rose Software">Indigo Rose Software</a></p><p id="description">Software Development Tools</p></div><!-- end #title-area --><div class="widget-area"><div id="text-9" class="widget widget_text"><div class="widget-wrap">			<div class="textwidget"><div style="padding: 30px 0 0 0;">&nbsp;</div></div>
 		</div></div>
-	<div id="cse-search-form70" style="width: 100%;">Loading</div>
+	<div id="cse-search-form39" style="width: 100%;">Loading</div>
 	<script type="text/javascript">
       google.load('search', '1', {language : 'en_US'});
       google.setOnLoadCallback(function() {
@@ -72,7 +72,7 @@
         customSearchControl.enableAds('2496164227');
 				
         var options = new google.search.DrawOptions();
-        options.setSearchFormRoot('cse-search-form70');
+        options.setSearchFormRoot('cse-search-form39');
         options.setAutoComplete(true);
     
         customSearchControl.draw('dialog', options);
@@ -99,7 +99,7 @@
 </div></div>
 		</div></div>
 </div><!-- end .widget_area --></div><!-- end .wrap --></div><!--end #header-->
-<div id="nav"><div class="wrap"><ul class="nav superfish"><li class="home"><a href="http://www.indigorose.com/" title="Home">Home</a></li><li class="page_item page-item-2"><a href="http://www.indigorose.com/products/" title="Professional Software Development Tools">Products</a></li><li class="page_item page-item-6"><a href="http://www.indigorose.com/buy-now/" title="Purchase Software Development Tools by Indigo Rose">Buy Now</a></li><li class="page_item page-item-8"><a href="http://www.indigorose.com/support/" title="Technical Support &amp; Software Maintenance">Support</a></li><li class="page_item page-item-441"><a href="http://www.indigorose.com/forums/" title="Forums">Forums</a></li><li class="page_item page-item-10"><a href="http://www.indigorose.com/about/" title="About Indigo Rose Software Design Corporation">Company</a></li><li class="page_item page-item-15"><a href="http://www.indigorose.com/contact/" title="Contact Indigo Rose Software">Contact</a></li><li class="right date">June 7, 2013</li></ul></div></div><div id="subnav"><div class="wrap"><ul id="menu-sub-nav-bar" class="nav superfish"><li id="menu-item-1902" class="menu-item menu-item-type-post_type menu-item-1902"><a href="http://www.indigorose.com/products/andromo/">Andromo for Android</a></li>
+<div id="nav"><div class="wrap"><ul class="nav superfish"><li class="home"><a href="http://www.indigorose.com/" title="Home">Home</a></li><li class="page_item page-item-2"><a href="http://www.indigorose.com/products/" title="Professional Software Development Tools">Products</a></li><li class="page_item page-item-6"><a href="http://www.indigorose.com/buy-now/" title="Purchase Software Development Tools by Indigo Rose">Buy Now</a></li><li class="page_item page-item-8"><a href="http://www.indigorose.com/support/" title="Technical Support &amp; Software Maintenance">Support</a></li><li class="page_item page-item-441"><a href="http://www.indigorose.com/forums/" title="Forums">Forums</a></li><li class="page_item page-item-10"><a href="http://www.indigorose.com/about/" title="About Indigo Rose Software Design Corporation">Company</a></li><li class="page_item page-item-15"><a href="http://www.indigorose.com/contact/" title="Contact Indigo Rose Software">Contact</a></li><li class="right date">December 23, 2013</li></ul></div></div><div id="subnav"><div class="wrap"><ul id="menu-sub-nav-bar" class="nav superfish"><li id="menu-item-1902" class="menu-item menu-item-type-post_type menu-item-1902"><a href="http://www.indigorose.com/products/andromo/">Andromo for Android</a></li>
 <li id="menu-item-333" class="menu-item menu-item-type-post_type menu-item-333"><a href="http://www.indigorose.com/products/autoplay-media-studio/">AutoPlay Media Studio</a>
 <ul class="sub-menu">
 	<li id="menu-item-1176" class="menu-item menu-item-type-custom menu-item-1176"><a href="/products/autoplay-media-studio/">Software Overview</a></li>
@@ -271,6 +271,6 @@ jQuery(document).ready(function($) {
 
 <!-- Performance optimized by W3 Total Cache. Learn more: http://www.w3-edge.com/wordpress-plugins/
 
-Page Caching using disk (enhanced)
+Page Caching using apc
 
-Served from: www.tnj.com35.indigorose.com @ 2013-06-07 19:18:06 --></body></html>
+Served from: www.indigorose.com @ 2013-12-23 02:29:20 --></body></html>
