--- a/m/mo/mov/movieroom.com.html
+++ b/m/mo/mov/movieroom.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the movieroom.com privacy policy that was archived on 2013-05-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130518162330id_/http%3A//movieroom.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the movieroom.com privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223033447id_/http%3A//movieroom.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><title>Movie Room - Porn Scenes DVD </title><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><meta name="google-site-verification" content="LXbji7yqVAQsYb5hciuBvA82EwAZ7TQOjbv_hrmnmRU"><meta name="RATING" content="RTA-5042-1996-1400-1577-RTA"><link href="http://dvd.static.hw.pwidownload.com/skins/movieroom/stylesheets/all_browsers.css" rel="stylesheet" type="text/css"><link rel="stylesheet" type="text/css" href="http://www.gammae.com/allclients/scripts/jquery/lightbox/jquery.lightbox-0.4.css" media="screen"><link rel="stylesheet" type="text/css" href="http://dvd.static.hw.pwidownload.com/skins/movieroom/scripts/rating/ui.stars.min.css"><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://dvd.static.hw.pwidownload.com/skins/movieroom/scripts/jquery.js"></script><script type="text/javascript" src="http://dvd.static.hw.pwidownload.com/skins/movieroom/scripts/jquery-ui.js"></script><script type="text/javascript" src="http://dvd.static.hw.pwidownload.com/skins/movieroom/scripts/rating/ui.stars.min.js"></script><script type="text/javascript">
 		jQuery(document).ready(function() {jQuery('.form_star_rating').stars({inputType:'select',oneVoteOnly:true,disabled:true,callback: function(star) {
@@ -87,7 +87,7 @@
 </div>
     <div id="headtext" class="global">
         <div class="page">
-            <p><em>Current Stats:</em> 6995 DVDs, 35539 Movies, An incredible 11706 Hours Of Porn.</p>
+            <p><em>Current Stats:</em> 7031 DVDs, 35693 Movies, An incredible 11740 Hours Of Porn.</p>
         </div>
     </div>
 
@@ -140,80 +140,80 @@
 
 
 
-    <ul><li class="secondary_dvds" style="display: block;"><a href="Alt+Porn-Porn-77.php">Alt Porn (19)</a></li><li class="secondary_dvds" style="display: block;"><a href="Amateur-Porn-2.php">Amateur (404)</a></li><li><a href="Anal-Porn-1.php">Anal (776)</a></li><li><a href="Asian-Porn-11.php">Asian (211)</a></li><li class="secondary_dvds" style="display: block;"><a href="BBW-Porn-24.php">BBW (75)</a></li><li class="tagNewCategory"><a href="BDSM-Porn-223.php">BDSM (25)</a></li><li class="secondary_dvds" style="display: block;"><a href="Bi-Porn-25.php">Bi (50)</a></li><li class="secondary_dvds" style="display: block;"><a href="Big+Ass-Porn-213.php">Big Ass (104)</a></li><li><a href="Big+Natural-Porn-209.php">Big Natural (110)</a></li><li><a href="Black-Porn-4.php">Black (309)</a></li><li class="secondary_dvds" style="display: block;"><a href="Blowjob-Porn-3.php">Blowjob (350)</a></li><li><a href="Busty-Porn-12.php">Busty (383)</a></li><li class="secondary_dvds" style="display: block;"><a href="ClassicVintage-Porn-13.php">Classic/Vintage (82)</a></li><li class="secondary_dvds" style="display: block;"><a href="Couples-Porn-225.php">Couples (11)</a></li><li class="secondary_dvds" style="display: block;"><a href="Cream+Pies-Porn-215.php">Cream Pies (463)</a></li><li class="secondary_dvds" style="display: block;"><a href="Cumshot-Porn-187.php">Cumshot (112)</a></li><li class="secondary_dvds" style="display: block;"><a href="Double+PenetrationDP-Porn-207.php">Double Penetration/DP (130)</a></li><li class="secondary_dvds" style="display: block;"><a href="Euro-Porn-9.php">Euro (314)</a></li><li class="secondary_dvds" style="display: block;"><a href="Femdom-Porn-219.php">Femdom (8)</a></li><li><a href="Fetish-Porn-7.php">Fetish (355)</a></li><li class="secondary_dvds" style="display: block;"><a href="Foot+Fetish-Porn-203.php">Foot Fetish (41)</a></li><li class="secondary_dvds" style="display: block;"><a href="Gangbang-Porn-10.php">Gangbang (81)</a></li><li class="secondary_dvds" style="display: block;"><a href="Gay-Porn-19.php">Gay (440)</a></li><li class="secondary_dvds" style="display: block;"><a href="Gonzo-Porn-217.php">Gonzo (194)</a></li><li class="secondary_dvds" style="display: block;"><a href="Granny++GILF-Porn-65.php">Granny / GILF (33)</a></li><li><a href="Hairy-Porn-201.php">Hairy (28)</a></li><li class="secondary_dvds" style="display: block;"><a href="Hand+Job-Porn-46.php">Hand Job (33)</a></li><li><a href="Hardcore-Porn-6.php">Hardcore (1454)</a></li><li class="secondary_dvds" style="display: block;"><a href="Indian-Porn-71.php">Indian (12)</a></li><li><a href="Interracial-Porn-5.php">Interracial (393)</a></li><li class="secondary_dvds" style="display: block;"><a href="Latex-Porn-221.php">Latex (1)</a></li><li class="secondary_dvds" style="display: block;"><a href="Latin-Porn-22.php">Latin (241)</a></li><li><a href="Lesbians-Porn-14.php">Lesbians (251)</a></li><li><a href="Mature++MILF-Porn-15.php">Mature / MILF (459)</a></li><li class="secondary_dvds" style="display: block;"><a href="Natural+Tits-Porn-205.php">Natural Tits (84)</a></li><li class="secondary_dvds" style="display: block;"><a href="Orgy-Porn-20.php">Orgy (66)</a></li><li class="secondary_dvds" style="display: block;"><a href="POV-Porn-66.php">P.O.V (154)</a></li><li><a href="Porn+Stars-Porn-16.php">Porn Stars (758)</a></li><li class="secondary_dvds" style="display: block;"><a href="Pregnant-Porn-227.php">Pregnant (4)</a></li><li class="secondary_dvds" style="display: block;"><a href="Solo-Porn-23.php">Solo (131)</a></li><li class="secondary_dvds" style="display: block;"><a href="Squirt-Porn-17.php">Squirt (66)</a></li><li><a href="Teen-Porn-8.php">Teen (703)</a></li><li class="secondary_dvds" style="display: block;"><a href="Threesome-Porn-21.php">Threesome (182)</a></li><li><a href="Tranny-Porn-18.php">Tranny (139)</a></li><li class="secondary_dvds" style="display: block;"><a href="Uniform-Porn-74.php">Uniform (88)</a></li><li class="secondary_dvds" style="display: block;"><a href="Voyeur-Porn-69.php">Voyeur (8)</a></li>    </ul></div>
+    <ul><li class="secondary_dvds" style="display: block;"><a href="Alt+Porn-Porn-77.php">Alt Porn (20)</a></li><li class="secondary_dvds" style="display: block;"><a href="Amateur-Porn-2.php">Amateur (405)</a></li><li><a href="Anal-Porn-1.php">Anal (778)</a></li><li><a href="Asian-Porn-11.php">Asian (211)</a></li><li class="secondary_dvds" style="display: block;"><a href="BBW-Porn-24.php">BBW (75)</a></li><li class="tagNewCategory"><a href="BDSM-Porn-223.php">BDSM (25)</a></li><li class="secondary_dvds" style="display: block;"><a href="Bi-Porn-25.php">Bi (50)</a></li><li class="secondary_dvds" style="display: block;"><a href="Big+Ass-Porn-213.php">Big Ass (104)</a></li><li><a href="Big+Natural-Porn-209.php">Big Natural (111)</a></li><li><a href="Black-Porn-4.php">Black (309)</a></li><li class="secondary_dvds" style="display: block;"><a href="Blowjob-Porn-3.php">Blowjob (355)</a></li><li><a href="Busty-Porn-12.php">Busty (386)</a></li><li class="secondary_dvds" style="display: block;"><a href="ClassicVintage-Porn-13.php">Classic/Vintage (82)</a></li><li class="secondary_dvds" style="display: block;"><a href="Couples-Porn-225.php">Couples (11)</a></li><li class="secondary_dvds" style="display: block;"><a href="Cream+Pies-Porn-215.php">Cream Pies (463)</a></li><li class="secondary_dvds" style="display: block;"><a href="Cumshot-Porn-187.php">Cumshot (117)</a></li><li class="secondary_dvds" style="display: block;"><a href="Double+PenetrationDP-Porn-207.php">Double Penetration/DP (130)</a></li><li class="secondary_dvds" style="display: block;"><a href="Euro-Porn-9.php">Euro (321)</a></li><li class="secondary_dvds" style="display: block;"><a href="Femdom-Porn-219.php">Femdom (8)</a></li><li><a href="Fetish-Porn-7.php">Fetish (355)</a></li><li class="secondary_dvds" style="display: block;"><a href="Foot+Fetish-Porn-203.php">Foot Fetish (41)</a></li><li class="secondary_dvds" style="display: block;"><a href="Gangbang-Porn-10.php">Gangbang (81)</a></li><li class="secondary_dvds" style="display: block;"><a href="Gay-Porn-19.php">Gay (441)</a></li><li class="secondary_dvds" style="display: block;"><a href="Gonzo-Porn-217.php">Gonzo (194)</a></li><li class="secondary_dvds" style="display: block;"><a href="Granny++GILF-Porn-65.php">Granny / GILF (33)</a></li><li><a href="Hairy-Porn-201.php">Hairy (28)</a></li><li class="secondary_dvds" style="display: block;"><a href="Hand+Job-Porn-46.php">Hand Job (33)</a></li><li><a href="Hardcore-Porn-6.php">Hardcore (1461)</a></li><li class="secondary_dvds" style="display: block;"><a href="Indian-Porn-71.php">Indian (12)</a></li><li><a href="Interracial-Porn-5.php">Interracial (393)</a></li><li class="secondary_dvds" style="display: block;"><a href="Latex-Porn-221.php">Latex (1)</a></li><li class="secondary_dvds" style="display: block;"><a href="Latin-Porn-22.php">Latin (241)</a></li><li><a href="Lesbians-Porn-14.php">Lesbians (265)</a></li><li><a href="Mature++MILF-Porn-15.php">Mature / MILF (463)</a></li><li class="secondary_dvds" style="display: block;"><a href="Natural+Tits-Porn-205.php">Natural Tits (94)</a></li><li class="secondary_dvds" style="display: block;"><a href="Orgy-Porn-20.php">Orgy (66)</a></li><li class="secondary_dvds" style="display: block;"><a href="POV-Porn-66.php">P.O.V (154)</a></li><li><a href="Porn+Stars-Porn-16.php">Porn Stars (758)</a></li><li class="secondary_dvds" style="display: block;"><a href="Pregnant-Porn-227.php">Pregnant (4)</a></li><li class="secondary_dvds" style="display: block;"><a href="Solo-Porn-23.php">Solo (131)</a></li><li class="secondary_dvds" style="display: block;"><a href="Squirt-Porn-17.php">Squirt (66)</a></li><li><a href="Teen-Porn-8.php">Teen (721)</a></li><li class="secondary_dvds" style="display: block;"><a href="Threesome-Porn-21.php">Threesome (182)</a></li><li><a href="Tranny-Porn-18.php">Tranny (139)</a></li><li class="secondary_dvds" style="display: block;"><a href="Uniform-Porn-74.php">Uniform (88)</a></li><li class="secondary_dvds" style="display: block;"><a href="Voyeur-Porn-69.php">Voyeur (8)</a></li>    </ul></div>
 
 <div class="pornstars">
 	<h2><a href="actors.php" class="view_all">Top Pornstars</a></h2>
     <ul><li>
-					<a class="fl" href="Maxine+X-Pornstar-Clip-4907.php"><img src="http://hw02.images.pwidownload.com/dvdbox/actors_pictures/48x48/4907.jpg" alt=""></a>
+					<a class="fl" href="Leah+Luv-Pornstar-Clip-3280.php"><img src="http://hw02.images.pwidownload.com/dvdbox/actors_pictures/48x48/3280.jpg" alt=""></a>
 					<p>
-						<a href="Maxine+X-Pornstar-Clip-4907.php" class="name"><strong>Maxine X</strong></a>
-						<a href="Maxine+X-Pornstar-4907.php">34 <em>DVDs</em></a>
-						<a href="Maxine+X-Pornstar-Clip-4907.php">98 <em>clips</em></a>
+						<a href="Leah+Luv-Pornstar-Clip-3280.php" class="name"><strong>Leah Luv</strong></a>
+						<a href="Leah+Luv-Pornstar-3280.php">64 <em>DVDs</em></a>
+						<a href="Leah+Luv-Pornstar-Clip-3280.php">86 <em>clips</em></a>
 					</p>
 				</li>
 				<li>
-					<a class="fl" href="Hillary+Scott-Pornstar-Clip-2968.php"><img src="http://hw03.images.pwidownload.com/dvdbox/actors_pictures/48x48/2968.jpg" alt=""></a>
+					<a class="fl" href="Katie+Morgan-Pornstar-Clip-1160.php"><img src="http://hw03.images.pwidownload.com/dvdbox/actors_pictures/48x48/1160.jpg" alt=""></a>
 					<p>
-						<a href="Hillary+Scott-Pornstar-Clip-2968.php" class="name"><strong>Hillary Scott</strong></a>
-						<a href="Hillary+Scott-Pornstar-2968.php">82 <em>DVDs</em></a>
-						<a href="Hillary+Scott-Pornstar-Clip-2968.php">90 <em>clips</em></a>
+						<a href="Katie+Morgan-Pornstar-Clip-1160.php" class="name"><strong>Katie Morgan</strong></a>
+						<a href="Katie+Morgan-Pornstar-1160.php">32 <em>DVDs</em></a>
+						<a href="Katie+Morgan-Pornstar-Clip-1160.php">55 <em>clips</em></a>
 					</p>
 				</li>
 				<li>
-					<a class="fl" href="Kat-Pornstar-Clip-3077.php"><img src="http://hw02.images.pwidownload.com/dvdbox/actors_pictures/48x48/3077.jpg" alt=""></a>
+					<a class="fl" href="Jayna+Oso-Pornstar-Clip-3720.php"><img src="http://hw03.images.pwidownload.com/dvdbox/actors_pictures/48x48/3720.jpg" alt=""></a>
 					<p>
-						<a href="Kat-Pornstar-Clip-3077.php" class="name"><strong>Kat</strong></a>
-						<a href="Kat-Pornstar-3077.php">75 <em>DVDs</em></a>
-						<a href="Kat-Pornstar-Clip-3077.php">88 <em>clips</em></a>
+						<a href="Jayna+Oso-Pornstar-Clip-3720.php" class="name"><strong>Jayna Oso</strong></a>
+						<a href="Jayna+Oso-Pornstar-3720.php">54 <em>DVDs</em></a>
+						<a href="Jayna+Oso-Pornstar-Clip-3720.php">55 <em>clips</em></a>
 					</p>
 				</li>
 				<li>
-					<a class="fl" href="Kelly+Wells-Pornstar-Clip-2950.php"><img src="http://hw02.images.pwidownload.com/dvdbox/actors_pictures/48x48/2950.jpg" alt=""></a>
+					<a class="fl" href="Holly+Wellin-Pornstar-Clip-3253.php"><img src="http://hw02.images.pwidownload.com/dvdbox/actors_pictures/48x48/3253.jpg" alt=""></a>
 					<p>
-						<a href="Kelly+Wells-Pornstar-Clip-2950.php" class="name"><strong>Kelly Wells</strong></a>
-						<a href="Kelly+Wells-Pornstar-2950.php">64 <em>DVDs</em></a>
-						<a href="Kelly+Wells-Pornstar-Clip-2950.php">78 <em>clips</em></a>
+						<a href="Holly+Wellin-Pornstar-Clip-3253.php" class="name"><strong>Holly Wellin</strong></a>
+						<a href="Holly+Wellin-Pornstar-3253.php">52 <em>DVDs</em></a>
+						<a href="Holly+Wellin-Pornstar-Clip-3253.php">54 <em>clips</em></a>
 					</p>
 				</li>
 				<li>
-					<a class="fl" href="Cytherea-Pornstar-Clip-2845.php"><img src="http://hw02.images.pwidownload.com/dvdbox/actors_pictures/48x48/2845.jpg" alt=""></a>
+					<a class="fl" href="Lauren+Phoenix-Pornstar-Clip-731.php"><img src="http://hw01.images.pwidownload.com/dvdbox/actors_pictures/48x48/731.jpg" alt=""></a>
 					<p>
-						<a href="Cytherea-Pornstar-Clip-2845.php" class="name"><strong>Cytherea</strong></a>
-						<a href="Cytherea-Pornstar-2845.php">46 <em>DVDs</em></a>
-						<a href="Cytherea-Pornstar-Clip-2845.php">68 <em>clips</em></a>
+						<a href="Lauren+Phoenix-Pornstar-Clip-731.php" class="name"><strong>Lauren Phoenix</strong></a>
+						<a href="Lauren+Phoenix-Pornstar-731.php">45 <em>DVDs</em></a>
+						<a href="Lauren+Phoenix-Pornstar-Clip-731.php">50 <em>clips</em></a>
 					</p>
 				</li>
 				<li>
-					<a class="fl" href="Mika+Tan-Pornstar-Clip-837.php"><img src="http://hw02.images.pwidownload.com/dvdbox/actors_pictures/48x48/837.jpg" alt=""></a>
+					<a class="fl" href="Melissa+Lauren-Pornstar-Clip-1792.php"><img src="http://hw02.images.pwidownload.com/dvdbox/actors_pictures/48x48/1792.jpg" alt=""></a>
 					<p>
-						<a href="Mika+Tan-Pornstar-Clip-837.php" class="name"><strong>Mika Tan</strong></a>
-						<a href="Mika+Tan-Pornstar-837.php">50 <em>DVDs</em></a>
-						<a href="Mika+Tan-Pornstar-Clip-837.php">51 <em>clips</em></a>
+						<a href="Melissa+Lauren-Pornstar-Clip-1792.php" class="name"><strong>Melissa Lauren</strong></a>
+						<a href="Melissa+Lauren-Pornstar-1792.php">48 <em>DVDs</em></a>
+						<a href="Melissa+Lauren-Pornstar-Clip-1792.php">49 <em>clips</em></a>
 					</p>
 				</li>
 				<li>
-					<a class="fl" href="Pinky-Pornstar-Clip-5192.php"><img src="http://hw02.images.pwidownload.com/dvdbox/actors_pictures/48x48/5192.jpg" alt=""></a>
+					<a class="fl" href="Roxy+Jezel-Pornstar-Clip-3265.php"><img src="http://hw02.images.pwidownload.com/dvdbox/actors_pictures/48x48/3265.jpg" alt=""></a>
 					<p>
-						<a href="Pinky-Pornstar-Clip-5192.php" class="name"><strong>Pinky</strong></a>
-						<a href="Pinky-Pornstar-5192.php">17 <em>DVDs</em></a>
-						<a href="Pinky-Pornstar-Clip-5192.php">45 <em>clips</em></a>
+						<a href="Roxy+Jezel-Pornstar-Clip-3265.php" class="name"><strong>Roxy Jezel</strong></a>
+						<a href="Roxy+Jezel-Pornstar-3265.php">47 <em>DVDs</em></a>
+						<a href="Roxy+Jezel-Pornstar-Clip-3265.php">48 <em>clips</em></a>
 					</p>
 				</li>
 				<li>
-					<a class="fl" href="Nautica+Thorn-Pornstar-Clip-2935.php"><img src="http://hw01.images.pwidownload.com/dvdbox/actors_pictures/48x48/2935.jpg" alt=""></a>
+					<a class="fl" href="Victoria+Sin-Pornstar-Clip-2948.php"><img src="http://hw03.images.pwidownload.com/dvdbox/actors_pictures/48x48/2948.jpg" alt=""></a>
 					<p>
-						<a href="Nautica+Thorn-Pornstar-Clip-2935.php" class="name"><strong>Nautica Thorn</strong></a>
-						<a href="Nautica+Thorn-Pornstar-2935.php">37 <em>DVDs</em></a>
-						<a href="Nautica+Thorn-Pornstar-Clip-2935.php">44 <em>clips</em></a>
+						<a href="Victoria+Sin-Pornstar-Clip-2948.php" class="name"><strong>Victoria Sin</strong></a>
+						<a href="Victoria+Sin-Pornstar-2948.php">40 <em>DVDs</em></a>
+						<a href="Victoria+Sin-Pornstar-Clip-2948.php">46 <em>clips</em></a>
 					</p>
 				</li>
 				<li>
-					<a class="fl" href="Marie+Luv-Pornstar-Clip-3637.php"><img src="http://hw01.images.pwidownload.com/dvdbox/actors_pictures/48x48/3637.jpg" alt=""></a>
+					<a class="fl" href="Tory+Lane-Pornstar-Clip-3086.php"><img src="http://hw02.images.pwidownload.com/dvdbox/actors_pictures/48x48/3086.jpg" alt=""></a>
 					<p>
-						<a href="Marie+Luv-Pornstar-Clip-3637.php" class="name"><strong>Marie Luv</strong></a>
-						<a href="Marie+Luv-Pornstar-3637.php">42 <em>DVDs</em></a>
-						<a href="Marie+Luv-Pornstar-Clip-3637.php">42 <em>clips</em></a>
+						<a href="Tory+Lane-Pornstar-Clip-3086.php" class="name"><strong>Tory Lane</strong></a>
+						<a href="Tory+Lane-Pornstar-3086.php">41 <em>DVDs</em></a>
+						<a href="Tory+Lane-Pornstar-Clip-3086.php">43 <em>clips</em></a>
 					</p>
 				</li>    </ul><a class="btn_viewall" href="actors.php"><span>View Top Pornstars »</span></a>
 </div>
