--- a/e/ea/eat/eatthis.com.html
+++ b/e/ea/eat/eatthis.com.html
@@ -1,14 +1,14 @@
-<!--The following is the downloaded HTML source of the eatthis.com privacy policy that was archived on 2013-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130628210315id_/http%3A//www.rodaleinc.com/your-privacy-rights) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the eatthis.com privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223044050id_/http%3A//www.rodaleinc.com/your-privacy-rights) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Your Privacy Policy | Rodale Inc</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" href="/sites/all/themes/rodale_inc/favicon.ico" type="image/x-icon">
-  <script type="text/javascript" src="/sites/all/modules/jquery_update/replace/jquery.min.js?v"></script>
-<script type="text/javascript" src="/misc/drupal.js?v"></script>
-<script type="text/javascript" src="/sites/all/modules/thickbox/thickbox.js?v"></script>
+  <script type="text/javascript" src="/sites/all/modules/jquery_update/replace/jquery.min.js?e"></script>
+<script type="text/javascript" src="/misc/drupal.js?e"></script>
+<script type="text/javascript" src="/sites/all/modules/thickbox/thickbox.js?e"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","thickbox":{"close":"Close","next":"Next \u003e","prev":"\u003c Prev","esc_key":"or Esc Key","next_close":"Next \/ Close on last","image_count":"Image !current of !total"}});
@@ -78,7 +78,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","thickbox":{"close":"Close","nex
  <input type="text" maxlength="128" name="search_block_form" id="edit-search-block-form-1" size="15" value="" title="Enter the terms you wish to search for." class="form-text">
 </div>
 <input type="submit" name="op" id="edit-submit" value="Search" class="form-submit submitBtn">
-<input type="hidden" name="form_build_id" id="form-da302c52b6da434cb65e7a363f3a1494" value="form-da302c52b6da434cb65e7a363f3a1494">
+<input type="hidden" name="form_build_id" id="form-a4baba5f2d9135557201c030fdbbee6f" value="form-a4baba5f2d9135557201c030fdbbee6f">
 <input type="hidden" name="form_id" id="edit-search-block-form" value="search_block_form">
 </div>
 
@@ -170,7 +170,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","thickbox":{"close":"Close","nex
 					            <a title="" href="/products/books"></a>
               		  </li>
 			                                            		  <li class="brand-corporate">
-					            <a title="" href="http://www.rodale.com"></a>
+					            <a title="" href="http://www.rodalenews.com"></a>
               		  </li>
 			                                            		  <li class="brand-rodale-grow">
 					            <a title="" href="http://www.rodalegrow.com"></a>
@@ -222,7 +222,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","thickbox":{"close":"Close","nex
 		<td><a href="http://www.rodaleinc.com/products/books" target="_blank"><img src="http://images.rodale.com/acc/rodaleinc/rdl_b.gif"></a></td>
 	</tr>
 	<tr>
-		<td><a href="http://www.rodale.com/" target="_blank"><img src="http://images.rodale.com/acc/rodaleinc/rdl.gif"></a></td>
+		<td><a href="http://www.rodalenews.com/" target="_blank"><img src="http://www.rodaleinc.com/files/logo-rodale-news-gray.png?1377272802" width="190" height="40"></a></td>
 		<td><a href="http://www.rodales.com/signup/index" target="_blank"><img src="http://images.rodale.com/acc/rodaleinc/rodales-logo.gif"></a></td>
 		<td><a href="http://fitbie.msn.com/" target="_blank"><img src="http://images.rodale.com/acc/rodaleinc/fitbie.gif"></a></td>
 	</tr>
@@ -351,7 +351,8 @@ If you have any questions regarding this privacy policy statement or if you feel
 <li><a href="/customer-service" title="Contact Us">Contact Us</a></li>
 <li><a href="http://www.rodaleinstitute.org/" title="Rodale Institute">Rodale Institute</a></li>
 <li><a href="http://www.rodales.com" title="Rodale's">Rodale's</a></li>
-<li class="last"><a href="https://rodaleinc-openhire.silkroad.com/epostings/" title="Career Opportunities">Career Opportunities</a></li>
+<li><a href="https://rodaleinc-openhire.silkroad.com/epostings/" title="Career Opportunities">Career Opportunities</a></li>
+<li class="last"><a href="http://www.rodaleinc.com/content/rodale-inc-website-application-and-social-media-terms-use" title="Community Terms of Use">Community Terms of Use</a></li>
 </ul>
 </div>
 </div>
