--- a/j/je/jet/jetphotos.net.html
+++ b/j/je/jet/jetphotos.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jetphotos.net privacy policy that was archived on 2013-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130624042002id_/http%3A//jetphotos.net/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jetphotos.net privacy policy that was archived on 2013-12-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131223072016id_/http%3A//jetphotos.net/privacy) for the most accurate reproduction.-->
 
 <html><head>
 <link rel="alternate" type="application/rss+xml" title="JetPhotos.Net Latest News" href="http://www.jetphotos.net/jpnews.xml">
@@ -10,10 +10,7 @@
 <link rel="alternate" type="application/rss+xml" title="JetPhotos.Net Forums - Flight Review" href="http://www.jetphotos.net/forums/external.php?type=RSS2&amp;forumids=17">
 <link rel="alternate" type="application/rss+xml" title="JetPhotos.Net Forums - Flight Simulator" href="http://www.jetphotos.net/forums/external.php?type=RSS2&amp;forumids=11">
 <link rel="alternate" type="application/rss+xml" title="JetPhotos.Net Forums - Model Aircraft" href="http://www.jetphotos.net/forums/external.php?type=RSS2&amp;forumids=12">
-
-<!-- ValueClick Media POP-UNDER CODE for JetPhotos.Net -->
-<script src="http://cdn.fastclick.net/js/adcodes/pubcode.min.js"></script><script type="text/javascript">document.write('<scr' + 'ipt type="text/javascript">(function () {try{VCM.media.render({sid:10722,media_id:2,media_type:2,version:"1.1",pfc:900000});} catch(e){}}());</scr' + 'ipt>');</script><script type="text/javascript">(function () {try{VCM.media.render({sid:10722,media_id:2,media_type:2,version:"1.1",pfc:900000});} catch(e){}}());</script>
-<!-- ValueClick Media POP-UNDER CODE for JetPhotos.Net --><style type="text/css">
+<style type="text/css">
       
 	INPUT    {font-family: Verdana, Helvetica, Arial;font-size: 8pt;}
 	SELECT   {font-family: Verdana, Helvetica, Arial;font-size: 8pt;width: 130px;}
@@ -68,10 +65,7 @@ a:hover {
  <tr>
     <td colspan="3" align="center">
 
-<!-- ValueClick Media 468x60 and 728x90 Banner CODE for JetPhotos.Net -->
-<script src="http://cdn.fastclick.net/js/adcodes/pubcode.min.js"></script><script type="text/javascript">document.write('<scr' + 'ipt type="text/javascript">(function () {try{VCM.media.render({sid:10722,media_id:1,media_type:5,version:"1.2"});} catch(e){document.write(\'<scr\' + \'ipt type="text/javascript" src="http://media.fastclick.net/w/get.media?sid=10722&m=1&tp=5&d=j&t=n&exc=1"></scr\' + \'ipt>\');}}());</scr' + 'ipt>');</script><script type="text/javascript">(function () {try{VCM.media.render({sid:10722,media_id:1,media_type:5,version:"1.2"});} catch(e){document.write('<scr' + 'ipt type="text/javascript" src="http://media.fastclick.net/w/get.media?sid=10722&m=1&tp=5&d=j&t=n&exc=1"></scr' + 'ipt>');}}());</script><script type="text/javascript" src="http://media.fastclick.net/w/get.media?sid=10722&amp;m=1&amp;tp=5&amp;d=j&amp;t=n&amp;exc=1"></script><noscript><a href="http://media.fastclick.net/w/click.here?sid=10722&m=1&c=1" target="_blank"><img src="http://media.fastclick.net/w/get.media?sid=10722&m=1&tp=5&d=s&c=1&vcm_acv=1.2" width=728 height=90 border=1></a></noscript>
-<!-- ValueClick Media 468x60 and 728x90 Banner CODE for JetPhotos.Net -->
-<!-- FASTCLICK.COM 468x60 and 728x90 Banner CODE for jetphotos.net -->
+<script type="text/javascript">var vclk_options = {sid:10722,media_id:1,media_type:5,version:"1.4"};</script><script class="vclk_pub_code" type="text/javascript" src="http://cdn.fastclick.net/js/adcodes/pubcode.min.js?sid=10722&amp;media_id=1&amp;media_type=5&amp;version=1.4&amp;exc=1"></script><noscript><a href="http://media.fastclick.net/w/click.here?sid=10722&m=1&c=1" target="_blank"><img src="http://media.fastclick.net/w/get.media?sid=10722&m=1&tp=5&d=s&c=1&vcm_acv=1.4" width="728" height="90" border="1"></a></noscript>
 </td>
 </tr>
 <tr>
